zeit.objectlog changes
======================

0.4 (unreleased)
----------------

0.3 (2008-06-05)
----------------

- The terms do not break when a principal is deleted (bug #4146).

0.2 (2008-04-28)
----------------

- Allow logging wich interaction but without principal. Required for logging in
  lovely.remotetask.
- Creating savepoint after creating a log entry, otherwise there are some
  problems with using the logentry in the same transaction.

0.1 (2008-04-21)
----------------

- first release
