@@ -4,6 +4,9 @@ zeit.objectlog changes
 0.4 (unreleased)
 ----------------
 
+- Fixed display of times in LogEntrySource: Times are now in the timezone
+  defined by an adapter from request to ITZInfo (bug #4314).
+
 0.3 (2008-06-05)
 ----------------
 
